<resources>
    <string name="app_name">SolarControllerProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_control">Controls</string>
    <string name="menu_readings">Readings</string>
    <string name="menu_tools">Help</string>
    <string name="menu_share">Login</string>
    <string name="menu_send">Logout</string>
    <string name="title_activity_settings_screen">Settings</string>

    <!-- Preference Titles -->
    <string name="language_header">Language</string>
    <string name="theme_header">Theme</string>

    <!-- Language Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="language_title">Preferred language </string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="communicate">Communicate</string>
    <string name="dark_theme">Dark theme:</string>
    <string name="welcome_text">Welcome to Solar Controller</string>
    <string name="automatic_tracking">Automatic Tracking</string>

    <string name="help_message">The application will give you the power to monitor your solar panels activity. It also provide an automatic or manual control to the positioning of your solar panels. The controls you see in the control screen adjusts the rotation and tilt of your panels and/or enabling the automatic tracking will direct your panels on the best position according to the current position of the sun.   If you need any more help, you can contact our customer support email @solarcontrol@humber.ca and telephone #: 416 829 0291.</string>


    <string name="title_activity_login">Login</string>
    <string name="login">login</string>
    <string name="signin">sign in</string>
    <string name="risgister">Register New User</string>
    <string name="signout">Sign out</string>
    <string name="email">enter email</string>
    <string name="password">password</string>
    <string name="Login">Login</string>
    <string name="quit">Quit</string>
    <string name="title_activity_register">Register</string>
    <string name="password1">password</string>
    <string name="password2">Enter password Again</string>
    <string name="register1">Register New User</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="logout_text">You Can LogOut Here</string>
    <string name="LogOut">Logout</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="elevation">Elevation</string>
    <string name="azimuth">Azimuth</string>
    <string name="timezone">Timezone</string>
    <string name="local_bar">Previous Average Harvest</string>
    <string name="status">Status</string>
    <string name="sun_s_position">Sun\'s Position</string>
    <string name="location">Location</string>
    <string name="readings">Readings</string>
    <string name="history">History</string>
    <string name="auto_align">Auto Align</string>
    <string name="tilt">Tilt</string>
    <string name="rotate">Rotate</string>
    <string name="tilt_control">Tilt Control</string>
    <string name="rotation_control">Rotation Control</string>

</resources>
